# apex

./: .gitignore  .pre-commit-config.yaml  Apex_Habitat_Training.html  MANIFEST.in  README.md  SECURITY.md  _extract_translations.py  add_search_indexes.py  fix_autoname.py  fix_workspace.py  license.txt  pyproject.toml  requirements.txt  setup.py  update_roles.py
.github/workflows/: lint.yml  migrate-check.yml  permissions-guard.yml  test.yml
apex_habitat/: __init__.py  hooks.py  modules.txt  patches.txt  setup.py
apex_habitat/apex_core/: __init__.py
apex_habitat/driver_portal/: components.d.ts  index.html  package.json  tailwind.config.js  vite.config.js
apex_habitat/habitat/: __init__.py  assignment_rules_seed.py  auto_email_reports_seed.py  dashboard_seed.py  email_templates_seed.py  kanban_seed.py  notifications_seed.py  tasks.py
apex_habitat/patches/: cleanup_stale_records.py
apex_habitat/salis/: assignment_rules_seed.py  auto_email_reports_seed.py  dashboard_seed.py  demo.py  email_templates_seed.py  fuel_engine.py  issue_seed.py  kanban_seed.py  movement_dashboard_seed.py  navbar_seed.py  notifications_seed.py  permissions.py  rental_engine.py  salis_lib.py  setup.py  tasks.py  utilisation_engine.py  workflow_seed.py
apex_habitat/tests/: __init__.py  _helpers.py  before_tests.py  test_accommodation_material_transfer.py  test_accommodation_stock_ledger.py  test_bed_booking_concurrency.py  test_change_log_popup.py  test_custody_stock_integration.py  test_dispatch_trip_workflow.py  test_driver_clearance_workflow.py  (+44 more)
docs/: INTEGRATION.md  TRAINING.md
(+975 files in other folders)
