[project]
name = "apex_habitat"
version = "0.8.5"
description = "Apex Habitat custom application for Frappe Framework v15."
authors = [
    { name = "Abdullah Fahad Al-Mutairi Co. (AFMCO)", email = "afm@afmcoltd.com" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = []

[project.urls]
Repository = "https://github.com/iabodysa/apex"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["apex_habitat/tests", "apex_habitat/habitat"]
python_files = "test_*.py"
addopts = "--tb=short"
